<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_marginStart="@dimen/margin_start_detail"
        android:layout_marginTop="@dimen/margin_start_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/photo"
        android:src="@drawable/ic_photo_holder" />

    <TextView
        android:id="@+id/label_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_detail"
        android:layout_marginTop="@dimen/margin_start_detail"
        android:text="@string/first_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/maxxx_padding"
        android:layout_marginTop="@dimen/min_padding"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/label_first_name"
        tools:text="Ксения" />

    <TextView
        android:id="@+id/label_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_detail"
        android:layout_marginTop="@dimen/min_padding"
        android:text="@string/last_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/maxxx_padding"
        android:layout_marginTop="@dimen/min_padding"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/label_last_name"
        tools:text="Кайшева" />

    <TextView
        android:id="@+id/label_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/max_padding"
        android:layout_marginTop="@dimen/max_padding"
        android:text="@string/birthday"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/maxxx_padding"
        android:layout_marginTop="@dimen/min_padding"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_birthday"
        tools:text="15.07.1983" />

    <TextView
        android:id="@+id/label_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/max_padding"
        android:layout_marginTop="@dimen/min_padding"
        android:text="@string/age"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/maxxx_padding"
        android:layout_marginTop="@dimen/min_padding"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_age"
        tools:text="35 лет" />

    <TextView
        android:id="@+id/label_specialty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/max_padding"
        android:layout_marginTop="@dimen/min_padding"
        android:text="@string/specialty_label"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <TextView
        android:id="@+id/specialty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/maxxx_padding"
        android:layout_marginTop="@dimen/min_padding"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_specialty"
        tools:text="Разработчик" />

</android.support.constraint.ConstraintLayout>